Task 9/ACL_TASK_9/src/csen1002/main/task9/Task9Parser.java
// Generated from C:/Users/xxnou/Desktop/CSEN 1002 Compilers Lab/ANTLR/ACL_TASK_9/grammar/Task9.g4 by ANTLR 4.13.1
package csen1002.main.task9;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Task9Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIGIZERO=1, DIGIONE=2, HASHTAG=3;
	public static final int
		RULE_s = 0, RULE_f = 1, RULE_t = 2, RULE_n = 3, RULE_d = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "f", "t", "n", "d"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'0'", "'1'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DIGIZERO", "DIGIONE", "HASHTAG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Task9.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    /**
	     * Compares two integer numbers
	     *
	     * @param x the first number to compare
	     * @param y the second number to compare
	     * @return 1 if x is equal to y, and 0 otherwise
	     */
	    public static int equals(int x, int y) {
	        return x == y ? 1 : 0;
	    }

	public Task9Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public int check;
		public FContext f;
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Task9Visitor ) return ((Task9Visitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(10);
			((SContext)_localctx).f = f();
			((SContext)_localctx).check =  ((SContext)_localctx).f.check * ((SContext)_localctx).f.m;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FContext extends ParserRuleContext {
		public int check;
		public int m;
		public DContext d;
		public TContext t;
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).enterF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).exitF(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Task9Visitor ) return ((Task9Visitor<? extends T>)visitor).visitF(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FContext f() throws RecognitionException {
		FContext _localctx = new FContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_f);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(13);
			((FContext)_localctx).d = d(1, 1);
			setState(14);
			((FContext)_localctx).t = t(2, ((FContext)_localctx).d.l);
			((FContext)_localctx).check =  ((FContext)_localctx).d.check * ((FContext)_localctx).t.check; ((FContext)_localctx).m =  ((FContext)_localctx).t.m;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TContext extends ParserRuleContext {
		public int r;
		public int l;
		public int check;
		public int m;
		public NContext n;
		public TerminalNode HASHTAG() { return getToken(Task9Parser.HASHTAG, 0); }
		public NContext n() {
			return getRuleContext(NContext.class,0);
		}
		public TContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TContext(ParserRuleContext parent, int invokingState, int r, int l) {
			super(parent, invokingState);
			this.r = r;
			this.l = l;
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).enterT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).exitT(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Task9Visitor ) return ((Task9Visitor<? extends T>)visitor).visitT(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TContext t(int r,int l) throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState(), r, l);
		enterRule(_localctx, 4, RULE_t);
		try {
			setState(22);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				((TContext)_localctx).check =  1; ((TContext)_localctx).m =  1;
				}
				break;
			case HASHTAG:
				enterOuterAlt(_localctx, 2);
				{
				setState(18);
				match(HASHTAG);
				setState(19);
				((TContext)_localctx).n = n(_localctx.r, 1, _localctx.l);
				((TContext)_localctx).check =  ((TContext)_localctx).n.check; ((TContext)_localctx).m =  ((TContext)_localctx).n.m;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NContext extends ParserRuleContext {
		public int r;
		public int c;
		public int l;
		public int check;
		public int m;
		public DContext d;
		public TContext t;
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public NContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public NContext(ParserRuleContext parent, int invokingState, int r, int c, int l) {
			super(parent, invokingState);
			this.r = r;
			this.c = c;
			this.l = l;
		}
		@Override public int getRuleIndex() { return RULE_n; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).enterN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).exitN(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Task9Visitor ) return ((Task9Visitor<? extends T>)visitor).visitN(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NContext n(int r,int c,int l) throws RecognitionException {
		NContext _localctx = new NContext(_ctx, getState(), r, c, l);
		enterRule(_localctx, 6, RULE_n);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			((NContext)_localctx).d = d(_localctx.r, 1);
			setState(25);
			((NContext)_localctx).t = t(_localctx.r+1,_localctx.l);
			((NContext)_localctx).check =  ((NContext)_localctx).d.check * ((NContext)_localctx).t.check; ((NContext)_localctx).m =  equals(((NContext)_localctx).d.l, _localctx.l) * ((NContext)_localctx).t.m;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DContext extends ParserRuleContext {
		public int r;
		public int c;
		public int l;
		public int check;
		public DContext d1;
		public TerminalNode DIGIZERO() { return getToken(Task9Parser.DIGIZERO, 0); }
		public TerminalNode DIGIONE() { return getToken(Task9Parser.DIGIONE, 0); }
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public DContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DContext(ParserRuleContext parent, int invokingState, int r, int c) {
			super(parent, invokingState);
			this.r = r;
			this.c = c;
		}
		@Override public int getRuleIndex() { return RULE_d; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).enterD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Task9Listener ) ((Task9Listener)listener).exitD(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Task9Visitor ) return ((Task9Visitor<? extends T>)visitor).visitD(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DContext d(int r,int c) throws RecognitionException {
		DContext _localctx = new DContext(_ctx, getState(), r, c);
		enterRule(_localctx, 8, RULE_d);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				match(DIGIZERO);
				((DContext)_localctx).l =  _localctx.c; ((DContext)_localctx).check =  1 - equals(_localctx.c, _localctx.r);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				match(DIGIONE);
				((DContext)_localctx).l =  _localctx.c; ((DContext)_localctx).check =  equals(_localctx.c, _localctx.r);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				match(DIGIZERO);
				setState(33);
				((DContext)_localctx).d1 = d(_localctx.r, _localctx.c+1);
				((DContext)_localctx).l =  ((DContext)_localctx).d1.l; ((DContext)_localctx).check =  (1 - equals(_localctx.c, _localctx.r)) * ((DContext)_localctx).d1.check;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(36);
				match(DIGIONE);
				setState(37);
				((DContext)_localctx).d1 = d(_localctx.r, _localctx.c+1);
				((DContext)_localctx).l =  ((DContext)_localctx).d1.l; ((DContext)_localctx).check =  equals(_localctx.c, _localctx.r) * ((DContext)_localctx).d1.check;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}